Fixed chat width overflow problem

--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -6,7 +6,7 @@
 
 /* MESSAGES */
 .messages {
-    flex-basis: 80%;
+    flex-basis: 90%;
     max-height: 400px;
     background-color: white;
     overflow-y: scroll;
@@ -20,6 +20,9 @@
 .messages span{
     font-weight: bold;
 }
+.messages > p {
+    max-width: 800px;
+}
 
 /* SEND MESSAGE FORM */
 .chat > form {
@@ -27,13 +30,14 @@
     display: flex;
     flex-direction: column;
     gap: 2px;
-    flex-basis: 20%;
+    flex-basis: 10%;
     background-color: white;
     color: black;
     padding: 5px;
 }
 .send_message {
     width: 100%;
+    height: 100%;
     display: flex;
     gap: 2px;
 }
